@@ -1,3 +1,10 @@
+2009-10-02
+
+	* src/trayicon.c
+	  src/syldap.c
+	  src/summaryview.c
+	  src/folderview.c: added missing locks on idle callbacks.
+
 2009-10-01
 
 	* libsylph/imap.c: reimplemented using GThreadPool.
